--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,48 @@
+.boxes {
+  display: grid;
+  grid-template-rows: 0.2fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-areas:
+    "nav nav nav nav"
+    "projects projects database database"
+    "footer footer footer footer";
+  grid-gap: 10rem;
+}
 
+.projects {
+  display: flex;
+  grid-row: 2 / 4;
+  grid-column: 1 / 4;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 10px;
+}
+
+.database {
+  display: flex;
+  flex-direction: column;
+  padding: auto;
+  align-items: center;
+  grid-row: 2 / 4;
+  grid-column: 3 / 2;
+  align-items: center;
+}
+
+.forumPosition {
+  padding: 10px;
+  grid-area: footer;
+}
+
+.forumCard {
+  width: 893px;
+  height: 121px;
+  background-color: #f4eaea;
+  font-weight: 800;
+}
+
+.dashBoardTitle {
+  display: flex;
+  grid-row: 2 / 2;
+  grid-column: 1 / 2;
+  align-items: center;
+}
