added more css styling

--- a/src/Components/ForumCard/ForumCard.css
+++ b/src/Components/ForumCard/ForumCard.css
@@ -1,3 +1,10 @@
+.buttonGroupForum {
+  display: flex;
+  flex-direction: row-reverse;
+  padding-right: 10px;
+  flex-wrap: wrap;
+}
+
 .accessoriesButton,
 .needItemButton {
   width: 122px;
