--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,8 @@
 
 .dashBoardTitle {
   display: flex;
+  font-weight: 700;
+  font-size: 36px;
   flex-direction: column;
   align-items: center;
 }
@@ -38,14 +40,17 @@
 .forumPosition {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   padding: 10px;
   grid-area: footer;
+  margin-top: 50px;
 }
 
 .forumCard {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   width: 893px;
   height: 121px;
   background-color: #f4eaea;
@@ -62,4 +67,22 @@ button {
   background-color: #84cee5;
   border: none;
   font-weight: 600;
+}
+
+@media (min-width: 200px) and (max-width: 700px) {
+  .boxes {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .projects {
+    margin-left: 50px;
+  }
+
+  button {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
 }
