--- a/src/Components/ProjectsCard/ProjectsCard.css
+++ b/src/Components/ProjectsCard/ProjectsCard.css
@@ -1,3 +1,10 @@
+.projectType {
+  display: flex;
+  flex-direction: column;
+  padding-top: 20px;
+  text-align: left;
+  justify-content: space-around;
+}
 .projects {
   padding: 20px;
   width: 617px;
@@ -6,7 +13,7 @@
 }
 
 .buttonGroup {
-  margin-top: 50px;
+  margin-top: 75px;
 }
 
 .viewAll,
