--- a/src/App.css
+++ b/src/App.css
@@ -16,15 +16,17 @@
   font-size: 36px;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 20px;
+  margin: 40px;
 }
 
 .projects {
   display: flex;
-  grid-row: 2 / 4;
+  grid-row: 1 / 4;
   grid-column: 1 / 4;
   flex-direction: column;
   align-items: center;
-  margin-left: 10px;
+  margin-left: 30px;
 }
 
 .database {
@@ -32,7 +34,7 @@
   flex-direction: column;
   padding: auto;
   align-items: center;
-  grid-row: 2 / 4;
+  grid-row: 1 / 4;
   grid-column: 3 / 3;
   align-items: center;
 }
@@ -42,9 +44,9 @@
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
-  padding: 10px;
-  grid-area: footer;
-  margin-top: 50px;
+  padding-left: 30px;
+  grid-row: 3 / 4;
+  grid-column: 1 / 3;
 }
 
 .forumCard {
