--- a/src/Components/ForumCard/ForumCard.css
+++ b/src/Components/ForumCard/ForumCard.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row-reverse;
   padding-right: 10px;
+  margin-top: 30px;
   flex-wrap: wrap;
 }
 
@@ -19,4 +20,11 @@
 
 .needItemButton {
   margin-left: 10px;
+}
+
+.messageAmount {
+  background-color: rgb(255, 127, 150);
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
 }
